--- a/popup.html
+++ b/popup.html
@@ -103,17 +103,17 @@
                 <span>Our plugin supports below list for now.</span>
             </div>
             <div class="site-list">
-                <a href="https://www.realtor.com/">
+                <a href="https://www.realtor.com/" target="_blank">
                     <span class="site-log">
                         <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
                     </span>
                 </a>
-                <a href="https://www.realtor.com/">
+                <a href="https://www.realtor.com/" target="_blank">
                     <span class="site-log">
                         <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
                     </span>
                 </a>
-                <a href="https://www.realtor.com/">
+                <a href="https://www.realtor.com/" target="_blank">
                     <span class="site-log">
                         <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
                     </span>
@@ -290,121 +290,121 @@
                                 <div class="data-container">
                                     <div class="api-average-rent">
                                         <span>Average Rent</span>
-                                        <span id="average_rent"></span>
+                                        <span id="average_rent" class="prop-data"></span>
                                     </div>
                                     <div class="api-downpayment">
                                         <span>Down Payment (<span id="downpayment_percent"></span>%)</span>
-                                        <span id="downpayment"></span>
+                                        <span id="downpayment" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-mortgage">
                                         <span>Mortgage</span>
-                                        <span id="mortgage"></span>
+                                        <span id="mortgage" class="prop-data"></span>
                                     </div>
                                     <div class="api-closing-cost">
                                         <span>Closing Cost (<span id="closingcost_per"></span>%)</span>
-                                        <span id="closingcost"></span>
+                                        <span id="closingcost" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-estimate-costof-repair">
                                         <span>Estimate Cost of Repair</span>
-                                        <span id="estimate_costofrepair"></span>
+                                        <span id="estimate_costofrepair" class="prop-data"></span>
                                     </div>
                                     <div class="api-total-capital-needed">
                                         <span>Total Capital Needed</span>
-                                        <span id="total_capital_needed"></span>
+                                        <span id="total_capital_needed" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-loan-term">
                                         <span>Loan Term</span>
-                                        <span id="loanterm"></span>
+                                        <span id="loanterm" class="prop-data"></span>
                                     </div>
                                     <div class="api-interest-rate">
                                         <span>Interest Rate</span>
-                                        <span id="interestrate"></span>
+                                        <span id="interestrate" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-principal-interest">
                                         <span>Principal & Interest</span>
-                                        <span id="principal_and_interest"></span>
+                                        <span id="principal_and_interest" class="prop-data"></span>
                                     </div>
                                     <div class="api-unit">
                                         <span>Unit</span>
-                                        <span id="unit"></span>
+                                        <span id="unit" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-gross-monthly-income">
                                         <span>Gross Monthly Income</span>
-                                        <span id="gross_monthly_income"></span>
+                                        <span id="gross_monthly_income" class="prop-data"></span>
                                     </div>
                                     <div class="api-gross-yearly-income">
                                         <span>Gross Yearly Income</span>
-                                        <span id="gross_yearly_income"></span>
+                                        <span id="gross_yearly_income" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-taxes">
                                         <span>Taxes</span>
-                                        <span id="taxes"></span>
+                                        <span id="taxes" class="prop-data"></span>
                                     </div>
                                     <div class="api-insurance">
                                         <span>Insurance</span>
-                                        <span id="insurance"></span>
+                                        <span id="insurance" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-vacancy">
                                         <span>Vacancy (<span id="vacancy_percent"></span>%)</span>
-                                        <span id="vacancy"></span>
+                                        <span id="vacancy" class="prop-data"></span>
                                     </div>
                                     <div class="api-maintenance">
                                         <span>Maintenance (<span id="maintenance_percent"></span>%)</span>
-                                        <span id="maintenance"></span>
+                                        <span id="maintenance" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-total-monthly-cost">
                                         <span>Total Monthly Cost</span>
-                                        <span id="total_monthly_cost"></span>
+                                        <span id="total_monthly_cost" class="prop-data"></span>
                                     </div>
                                     <div class="api-total-yearly-cost">
                                         <span>Total Yearly Cost</span>
-                                        <span id="total_yearly_cost"></span>
+                                        <span id="total_yearly_cost" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-monthly-net-operator">
                                         <span>Monthly Net Operator</span>
-                                        <span id="monthly_net_operator"></span>
+                                        <span id="monthly_net_operator" class="prop-data"></span>
                                     </div>
                                     <div class="api-yearly-net-operator">
                                         <span>Yearly Net Operator</span>
-                                        <span id="yearly_net_operator"></span>
+                                        <span id="yearly_net_operator" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-cap-rate">
                                         <span>Cap Rate</span>
-                                        <span id="cap_rate"></span>
+                                        <span id="cap_rate" class="prop-data"></span>
                                     </div>
                                     <div class="api-cashon-cash-return">
                                         <span>Cash on Cash Return</span>
-                                        <span id="cash_on_cash_return"></span>
+                                        <span id="cash_on_cash_return" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="data-container">
                                     <div class="api-total-cash-flow-monthly">
                                         <span>Total Cash Flow Monthly</span>
-                                        <span id="total_cash_flow_monthly"></span>
+                                        <span id="total_cash_flow_monthly" class="prop-data"></span>
                                     </div>
                                     <div class="api-total-cash-flow-yearly">
                                         <span>Total Cash Flow Yearly</span>
-                                        <span id="total_cash_flow_yearly"></span>
+                                        <span id="total_cash_flow_yearly" class="prop-data"></span>
                                     </div>
                                 </div>
                                 <div class="back-btn">
