--- a/popup.html
+++ b/popup.html
@@ -293,7 +293,7 @@
                                         <span id="average_rent" class="prop-data"></span>
                                     </div>
                                     <div class="api-downpayment">
-                                        <span>Down Payment (<span id="downpayment_percent"></span>%)</span>
+                                        <span>Down Payment (<span id="downpayment_percent" class="prop-data"></span>%)</span>
                                         <span id="downpayment" class="prop-data"></span>
                                     </div>
                                 </div>
@@ -303,7 +303,7 @@
                                         <span id="mortgage" class="prop-data"></span>
                                     </div>
                                     <div class="api-closing-cost">
-                                        <span>Closing Cost (<span id="closingcost_per"></span>%)</span>
+                                        <span>Closing Cost (<span id="closingcost_per" class="prop-data"></span>%)</span>
                                         <span id="closingcost" class="prop-data"></span>
                                     </div>
                                 </div>
@@ -359,11 +359,11 @@
                                 </div>
                                 <div class="data-container">
                                     <div class="api-vacancy">
-                                        <span>Vacancy (<span id="vacancy_percent"></span>%)</span>
+                                        <span>Vacancy (<span id="vacancy_percent" class="prop-data"></span>%)</span>
                                         <span id="vacancy" class="prop-data"></span>
                                     </div>
                                     <div class="api-maintenance">
-                                        <span>Maintenance (<span id="maintenance_percent"></span>%)</span>
+                                        <span>Maintenance (<span id="maintenance_percent" class="prop-data"></span>%)</span>
                                         <span id="maintenance" class="prop-data"></span>
                                     </div>
                                 </div>
@@ -441,7 +441,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="plan-cancel-status mt-2 error-message">
+                        <div class="plan-cancel-status error-message">
                             Your plan has been cancelled.
                         </div>
                         <div class="plan-btns">
