--- a/popup.html
+++ b/popup.html
@@ -465,6 +465,8 @@
                     </div>
                 </div>
             </div>
+            <div class="rent-property error-message">
+            </div>
         </div>
     </main>
     <!-- bootstrap js -->
