--- a/popup.html
+++ b/popup.html
@@ -465,7 +465,8 @@
                     </div>
                 </div>
             </div>
-            <div class="rent-property error-message">
+            <div class="rent-property error-message d-none">
+                This is Rental property. Extension only works with Sale property.
             </div>
         </div>
     </main>
