--- a/popup.html
+++ b/popup.html
@@ -286,6 +286,9 @@
                                 <span id="city"></span>
                                 <span id="state"></span>
                             </div>
+                            <div class="data-message">
+                                <span class="prop-data" id="average_rent_formula"></span>
+                            </div>
                             <div class="api-data">
                                 <div class="data-container">
                                     <div class="api-average-rent">
