--- a/popup.html
+++ b/popup.html
@@ -286,7 +286,7 @@
                                 <span id="city"></span>
                                 <span id="state"></span>
                             </div>
-                            <div class="data-message">
+                            <div class="formula-container">
                                 <span class="prop-data" id="average_rent_formula"></span>
                             </div>
                             <div class="api-data">
