--- a/popup.html
+++ b/popup.html
@@ -450,6 +450,8 @@
                             </div>
                             <div id="cancel_btn_cntnr" class="d-none">
                                 <button type="button" class="btn" id="cancel_btn">Cancel plan</button>
+                                <div class="spinner-border text-dark d-none" role="status" id="cancel_spinner">
+                                </div>
                             </div>
                             <div>
                                 <a href="" target="_blank" class="btn change-plan">Change plan</a>
