--- a/popup.html
+++ b/popup.html
@@ -124,6 +124,10 @@
                 <span>Please select any property to Evaluate</span>
             </div>
         </div>
+        <div class="prop-details-spinner text-center d-none">
+            <div class="spinner-border text-dark" role="status" id="prop_details_spinner">
+            </div>
+        </div>
         <div class="realtor-property-details">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
