--- a/popup.html
+++ b/popup.html
@@ -221,7 +221,7 @@
                                             <div class="error-message">Please enter maintenance</div>
                                         </div>
                                     </div>
-                                    <div class="unit">
+                                    <div class="unit" data-bs-toggle="tooltip" data-bs-html="true" title="<b>1/2 = 2 units</b><br><b>1/3 = 3 units</b><br><b>1/4 = 4 units</b><br><br><b>2 units</b><br><b>5 Bedrooms</b><br><b>2.5 Bathrooms</b>">
                                         <span>Unit<em>*</em></span>
                                         <div>
                                             <input type="number" class="form-control req-input" name="unit" id="unit" value="1">
@@ -290,8 +290,28 @@
                                 <span id="city"></span>
                                 <span id="state"></span>
                             </div>
+                            <input type="hidden" id="property_id" value="">
                             <div class="formula-container">
                                 <span class="prop-data" id="average_rent_formula"></span>
+                            </div>
+                            <div class="increase-rate-container d-flex align-items-center">
+                                <div class="me-2">
+                                    <button type="button" class="btn recall-api" data-rentoption="" data-rentvalue="">5%</button>
+                                </div>
+                                <div class="me-2">
+                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="10">10%</button>
+                                </div>
+                                <div class="me-2">
+                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="15">15%</button>
+                                </div>
+                                <div class="me-2">
+                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="20">20%</button>
+                                </div>
+                                <div class="me-2">
+                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="25">25%</button>
+                                </div>
+                            </div>
+                            <div class="error-message rate-error">
                             </div>
                             <div class="api-data">
                                 <div class="data-container">
@@ -299,116 +319,122 @@
                                         <span>Average Rent</span>
                                         <span id="average_rent" class="prop-data"></span>
                                     </div>
+                                    <div class="api-highest-rent recall-api" data-rentoption="highest_rent" data-rentvalue="0">
+                                        <span>Highest Rent</span>
+                                        <span id="highest_rent" class="highest-rent"></span>
+                                    </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-downpayment">
                                         <span>Down Payment (<span id="downpayment_percent" class="prop-data"></span>%)</span>
                                         <span id="downpayment" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-mortgage">
                                         <span>Mortgage</span>
                                         <span id="mortgage" class="prop-data"></span>
                                     </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-closing-cost">
                                         <span>Closing Cost (<span id="closingcost_per" class="prop-data"></span>%)</span>
                                         <span id="closingcost" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-estimate-costof-repair">
                                         <span>Estimate Cost of Repair</span>
                                         <span id="estimate_costofrepair" class="prop-data"></span>
                                     </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-total-capital-needed">
                                         <span>Total Capital Needed</span>
                                         <span id="total_capital_needed" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-loan-term">
                                         <span>Loan Term</span>
                                         <span id="loanterm" class="prop-data"></span>
-                                    </div>
+                                    </div>                                    
+                                </div>
+                                <div class="data-container">
                                     <div class="api-interest-rate">
                                         <span>Interest Rate</span>
                                         <span id="interestrate" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-principal-interest">
                                         <span>Principal & Interest</span>
                                         <span id="principal_and_interest" class="prop-data"></span>
-                                    </div>
+                                    </div>                                    
+                                </div>
+                                <div class="data-container">
                                     <div class="api-unit">
                                         <span>Unit</span>
                                         <span id="unit" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-gross-monthly-income">
                                         <span>Gross Monthly Income</span>
                                         <span id="gross_monthly_income" class="prop-data"></span>
-                                    </div>
+                                    </div>                                
+                                </div>
+                                <div class="data-container">
                                     <div class="api-gross-yearly-income">
                                         <span>Gross Yearly Income</span>
                                         <span id="gross_yearly_income" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-taxes">
                                         <span>Taxes</span>
                                         <span id="taxes" class="prop-data"></span>
-                                    </div>
+                                    </div>                                   
+                                </div>
+                                <div class="data-container">
                                     <div class="api-insurance">
                                         <span>Insurance</span>
                                         <span id="insurance" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-vacancy">
                                         <span>Vacancy (<span id="vacancy_percent" class="prop-data"></span>%)</span>
                                         <span id="vacancy" class="prop-data"></span>
-                                    </div>
+                                    </div>                                    
+                                </div>
+                                <div class="data-container">
                                     <div class="api-maintenance">
                                         <span>Maintenance (<span id="maintenance_percent" class="prop-data"></span>%)</span>
                                         <span id="maintenance" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-total-monthly-cost">
                                         <span>Total Monthly Cost</span>
                                         <span id="total_monthly_cost" class="prop-data"></span>
-                                    </div>
+                                    </div>                                    
+                                </div>
+                                <div class="data-container">
                                     <div class="api-total-yearly-cost">
                                         <span>Total Yearly Cost</span>
                                         <span id="total_yearly_cost" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-monthly-net-operator">
                                         <span>Monthly Net Operator</span>
                                         <span id="monthly_net_operator" class="prop-data"></span>
-                                    </div>
+                                    </div>                                   
+                                </div>
+                                <div class="data-container">
                                     <div class="api-yearly-net-operator">
                                         <span>Yearly Net Operator</span>
                                         <span id="yearly_net_operator" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-cap-rate">
                                         <span>Cap Rate</span>
                                         <span id="cap_rate" class="prop-data"></span>
-                                    </div>
+                                    </div>                                
+                                </div>
+                                <div class="data-container">
                                     <div class="api-cashon-cash-return">
                                         <span>Cash on Cash Return</span>
                                         <span id="cash_on_cash_return" class="prop-data"></span>
                                     </div>
-                                </div>
-                                <div class="data-container">
                                     <div class="api-total-cash-flow-monthly">
                                         <span>Total Cash Flow Monthly</span>
                                         <span id="total_cash_flow_monthly" class="prop-data"></span>
-                                    </div>
+                                    </div>                                    
+                                </div>
+                                <div class="data-container">
                                     <div class="api-total-cash-flow-yearly">
                                         <span>Total Cash Flow Yearly</span>
                                         <span id="total_cash_flow_yearly" class="prop-data"></span>
