add highest-rent increase-rate

--- a/popup.html
+++ b/popup.html
@@ -296,7 +296,7 @@
                             </div>
                             <div class="increase-rate-container d-flex align-items-center">
                                 <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="" data-rentvalue="">5%</button>
+                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="5">5%</button>
                                 </div>
                                 <div class="me-2">
                                     <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="10">10%</button>
