--- a/popup.html
+++ b/popup.html
@@ -221,8 +221,11 @@
                                             <div class="error-message">Please enter maintenance</div>
                                         </div>
                                     </div>
-                                    <div class="unit" data-bs-toggle="tooltip" data-bs-html="true" title="<b>1/2 = 2 units</b><br><b>1/3 = 3 units</b><br><b>1/4 = 4 units</b><br><br><b>2 units</b><br><b>5 Bedrooms</b><br><b>2.5 Bathrooms</b>">
-                                        <span>Unit<em>*</em></span>
+                                    <div class="unit">
+                                        <div class="unit-info d-flex align-items-center">
+                                            <span class="me-1">Unit<em>*</em></span>
+                                            <img src="./assets/images/info.svg" alt="info" height="15px" width="15px" data-bs-toggle="tooltip" data-bs-html="true" title="<b>1/2 = 2 units</b><br><b>1/3 = 3 units</b><br><b>1/4 = 4 units</b><br><br><b>2 units</b><br><b>5 Bedrooms</b><br><b>2.5 Bathrooms</b>" id="unit_info">
+                                        </div>
                                         <div>
                                             <input type="number" class="form-control req-input" name="unit" id="unit" value="1">
                                             <div class="error-message">Please enter number of unit</div>
