add note: style-italic

--- a/popup.html
+++ b/popup.html
@@ -314,8 +314,12 @@
                                     <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="25">25%</button>
                                 </div>
                             </div>
-                            <div class="error-message rate-error">
+                            <div class="increase-rate-container-heading">
+                                <span>Note: select highest rent or average rent for properties in</span>
+                                <span id="rate_container_city"></span>
+                                <span id="rate_container_state"></span>
                             </div>
+                            <div class="error-message rate-error"></div>
                             <div class="api-data">
                                 <div class="data-container">
                                     <div class="api-average-rent">
