average rent price

--- a/popup.html
+++ b/popup.html
@@ -296,21 +296,26 @@
                             <div class="formula-container">
                                 <span class="prop-data" id="average_rent_formula"></span>
                             </div>
-                            <div class="increase-rate-container d-flex align-items-center">
-                                <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="5">5%</button>
+                            <div class="increase-rate-container">
+                                <div class="rate-container-heading">
+                                    <span>Raise the average rent price</span>
                                 </div>
-                                <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="10">10%</button>
-                                </div>
-                                <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="15">15%</button>
-                                </div>
-                                <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="20">20%</button>
-                                </div>
-                                <div class="me-2">
-                                    <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="25">25%</button>
+                                <div class="d-flex align-items-center">
+                                    <div class="me-2">
+                                        <button type="button" class="btn recall-api" data-rentoption="options_btn" data-rentvalue="5">5%</button>
+                                    </div>
+                                    <div class="me-2">
+                                        <button type="button" class="btn recall-api recall-api-disabled" data-rentoption="options_btn" data-rentvalue="10" disabled>10%</button>
+                                    </div>
+                                    <div class="me-2">
+                                        <button type="button" class="btn recall-api recall-api-disabled" data-rentoption="options_btn" data-rentvalue="15" disabled>15%</button>
+                                    </div>
+                                    <div class="me-2">
+                                        <button type="button" class="btn recall-api recall-api-disabled" data-rentoption="options_btn" data-rentvalue="20" disabled>20%</button>
+                                    </div>
+                                    <div class="me-2">
+                                        <button type="button" class="btn recall-api recall-api-disabled" data-rentoption="options_btn" data-rentvalue="25" disabled>25%</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="increase-rate-container-heading">
