--- a/popup.html
+++ b/popup.html
@@ -298,7 +298,7 @@
                             </div>
                             <div class="increase-rate-container">
                                 <div class="rate-container-heading">
-                                    <span>Raise the average rent price</span>
+                                    <span>Raise the rent price using percentage</span>
                                 </div>
                                 <div class="d-flex align-items-center">
                                     <div class="me-2">
