--- a/popup.html
+++ b/popup.html
@@ -456,7 +456,7 @@
                                     </div>
                                 </div>
                                 <div class="back-btn">
-                                    <a href="http://192.168.1.13:8000/billing/" target="_blank" class="full-access">subscribe for full access</a>
+                                    <a href="http://192.168.1.13:8000/billing/" target="_blank" class="full-access">Subscribe for full access</a>
                                     <button type="button" class="btn">BACK</button>
                                 </div>
                             </div>
