--- a/popup.html
+++ b/popup.html
@@ -333,7 +333,7 @@
                                         </button>
                                     </div>
                                     <div class="api-highest-rent">
-                                        <button class="recall-api" data-rentoption="highest_rent" data-rentvalue="0" disabled>
+                                        <button class="recall-api recall-api-disabled" data-rentoption="highest_rent" data-rentvalue="0" disabled>
                                             <span>Highest Rent</span>
                                             <span id="highest_rent" class="highest-rent"></span>
                                         </button>
